# starina

./: .gdb_history  .gdbinit  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  LLM.md  Makefile  README.md  debug.sh  guest.S  idl.json  run.sh  rust-toolchain.toml  setup.sh  sx
.github/: copilot-instructions.md
apps/drivers/virtio_net/: Cargo.toml  app.toml  autogen.rs  lib.rs  virtio_net.rs
apps/drivers/virtio_net/src/: autogen.rs  lib.rs  virtio_net.rs
apps/goldfish_rtc/: Cargo.toml  main.rs
apps/http_server/: 404.html  Cargo.toml  http.rs  index.html  main.rs
apps/servers/apiserver/: Cargo.toml
apps/servers/apiserver/shell/: index.html
apps/servers/apiserver/src/: lib.rs
apps/servers/apiserver/src/endpoints/: big.rs  index.rs  logs.rs  mod.rs
apps/servers/apiserver/src/http/: headers.rs  mod.rs  parser.rs  request.rs  response.rs  status.rs
apps/servers/lx/: Cargo.toml  Dockerfile  app.toml  linux.riscv64.config
apps/servers/lx/lxinit/: Cargo.toml
apps/servers/lx/lxinit/src/: main.rs
apps/servers/lx/src/: autogen.rs  device_tree.rs  fs.rs  guest_memory.rs  lib.rs  linux_loader.rs  mmio.rs
apps/servers/lx/src/riscv/: device_tree.rs  mod.rs  plic.rs
apps/servers/lx/src/virtio/: device.rs  mod.rs  virtio_fs.rs  virtqueue.rs
apps/servers/lx/src/virtio/virtio_fs/: device.rs  fs.rs  fuse.rs  mod.rs
apps/servers/tcpip/: Cargo.toml  app.toml  autogen.rs  device.rs  lib.rs  main.rs  smoltcp_logger.rs  tcpip.rs
apps/servers/tcpip/src/: autogen.rs  lib.rs  tcpip.rs
apps/tcpip/: Cargo.toml  build.rs  device.rs  main.rs  smotcp_log.rs  tcpip.rs
apps/virtio_net/: Cargo.toml  main.rs  virtio_net.rs
boot/riscv64/: Cargo.toml  boot.S  kernel.json  main.rs  riscv64-qemu-virt.json
cli/: Cargo.toml  main.rs  make.rs  print.rs
cli/commands/: build.rs  mod.rs  run.rs  scaffold.rs
cli/minimake/: depinfo_parser.rs  mod.rs
cli/templates/: buildconfig.mk
cli/templates/scaffold_app/: Cargo.toml  main.rs
kernel/: Cargo.toml  allocator.rs  app_loader.rs  autopilot.rs  boot.rs  bootfs.rs  build.rs  channel.rs  cpuvar.rs  device_tree.rs  folio.rs  handle.rs  interrupt.rs  iobus.rs  lib.rs  main.rs  memory.rs  panic.rs  poll.rs  print.rs  process.rs  ref_counted.rs  refcount.rs  scheduler.rs  signal.rs  spinlock.rs  startup.rs  syscall.rs  thread.rs  utils.rs  vmspace.rs
kernel/arch/: mod.rs
kernel/arch/arm64/: cpuvar.rs  gic_v2.rs  idle.rs  interrupt.S  mod.rs  thread.rs  vmspace.rs
kernel/arch/host/: mod.rs
kernel/arch/riscv64/: backtrace.rs  boot.rs  cpuvar.rs  csr.rs  entry.rs  idle.rs  interrupt.S  interrupt.rs  kernel.json  kernel.ld  mod.rs  plic.rs  riscv64-starina.json  sbi.rs  switch.rs  thread.rs  transition.rs  vmspace.rs
kernel/arch/riscv64/machine/: mod.rs  qemu_virt.rs
kernel/arch/user/: mod.rs
kernel/arch/x64/: cpuvar.rs  idle.rs  idt.rs  interrupt.rs  io_apic.rs  local_apic.rs  mod.rs  mptable.rs  switch.rs  thread.rs  vmspace.rs
kernel/isolation/: mod.rs
kernel/isolation/wasm/: mod.rs  wasi.rs
kernel/src/: allocator.rs  channel.rs  cpuvar.rs  device_tree.rs  folio.rs  handle.rs  hvspace.rs  interrupt.rs  iobus.rs  main.rs  panic.rs  poll.rs  print.rs  process.rs  spinlock.rs  startup.rs  syscall.rs  thread.rs  timer.rs  vcpu.rs  vmspace.rs
kernel/src/allocator/: bump_allocator.rs  mod.rs  talc_allocator.rs
kernel/src/arch/host/: mod.rs  timer.rs
kernel/src/arch/riscv64/: boot.rs  cpuvar.rs  csr.rs  entry.rs  hvspace.rs  idle.rs  interrupt.rs  kernel.json  mod.rs  plic.rs  riscv.rs  sbi.rs  sv48.rs  thread.rs  timer.rs  vcpu.rs  vmspace.rs
kernel/src/isolation/: inkernel.rs  mod.rs
kernel/src/utils/: mmio.rs  mod.rs  ring_buffer.rs
kernel/utils/: mmio.rs  mod.rs
libs/rust/ftl_api_macros/: Cargo.toml  lib.rs
libs/rust/starina/: Cargo.toml  address.rs  app.rs  channel.rs  collections.rs  error.rs  eventloop.rs  folio.rs  handle.rs  interrupt.rs  iobus.rs  lib.rs  log.rs  mainloop.rs  message.rs  panic.rs  poll.rs  print.rs  start.rs  syscall.rs  tls.rs  worker.rs
libs/rust/starina/arch/: mod.rs
libs/rust/starina/arch/arm64/: arm64-user.json  mod.rs  start.S  syscall.rs
libs/rust/starina/arch/x64/: x64-user.json
libs/rust/starina/src/: channel.rs  eventloop.rs  folio.rs  handle.rs  hvspace.rs  interrupt.rs  iobus.rs  lib.rs  log.rs  mainloop.rs  message.rs  mmio.rs  poll.rs  prelude.rs  start.rs  syscall.rs  thread.rs  timer.rs  vcpu.rs  vmspace.rs
libs/rust/starina/src/linux/: mod.rs
libs/rust/starina/src/sync/: mod.rs  mutex.rs
libs/rust/starina/sync/: mutex.rs
libs/rust/starina_api/: Cargo.toml  channel.rs  environ.rs  folio.rs  handle.rs  interrupt.rs  lib.rs  log.rs  mainloop.rs  poll.rs  prelude.rs  signal.rs  start.rs
libs/rust/starina_api/arch/arm64/: arm64-user.json
libs/rust/starina_api/arch/riscv64/: riscv64-user.json
libs/rust/starina_api/arch/x64/: x64-user.json
libs/rust/starina_autogen/: Cargo.toml  autogen.rs.j2  lib.rs
libs/rust/starina_linux/: Cargo.toml  Dockerfile  build-linux.sh  catsay.go  linux.riscv64.config
libs/rust/starina_linux/linuxinit/: Cargo.toml
libs/rust/starina_linux/linuxinit/src/: main.rs
libs/rust/starina_linux/lxinit/: Cargo.toml
libs/rust/starina_linux/lxinit/src/: main.rs
libs/rust/starina_linux/src/: boot.rs  command.rs  fs.rs  guest_memory.rs  lib.rs  linux_loader.rs
libs/rust/starina_linux/src/riscv/: device_tree.rs
libs/rust/starina_linux/src/virtio/: device.rs  virtqueue.rs
libs/rust/starina_types/: Cargo.toml  address.rs  device_tree.rs  error.rs  handle.rs  idl.rs  interrupt.rs  lib.rs  message.rs  poll.rs  spec.rs  syscall.rs  vmspace.rs
libs/rust/starina_types/src/: address.rs  device_tree.rs  environ.rs  error.rs  handle.rs  lib.rs  poll.rs  spec.rs  syscall.rs  timer.rs  vcpu.rs  vmspace.rs
libs/rust/wasmjs/: Cargo.toml  app.c  app.js  app.precompiled  app.wasm  app.wasmtime  app.wat  build.rs  lib.rs
linux/bootd/: Cargo.toml
linux/bootd/src/: loopback.rs  main.rs
linux/linuxinit/: Cargo.toml  rust-toolchain.toml  zig-linker.sh
linux/linuxinit/src/: main.rs
tools/mkbootfs/: Cargo.toml  main.rs
(+228 files in other folders)
