[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/rust/*",
    "apps/drivers/virtio_net",
    "apps/servers/tcpip",
    "apps/bin/http_server",
    "apps/bin/hello_from_javascript",
]

[workspace.package]
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2024"

[workspace.dependencies]
arrayvec = { version = "0.7.6", default-features = false }
hashbrown = "0.15.2"
rustc-hash = { version = "2.1.1", default-features = false }
spin = "0.9.8"
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.17", default-features = false }
fdt-rs = { version = "0", default-features = false }
log = "0.4"
wasmi = { version = "0.44.0", default-features = false, features = [
    "hash-collections",
] }

kernel = { path = "kernel" }
starina = { path = "libs/rust/starina" }
starina_types = { path = "libs/rust/starina_types" }
starina_utils = { path = "libs/rust/starina_utils" }
starina_driver_sdk = { path = "libs/rust/driver_sdk" }
virtio = { path = "libs/rust/virtio" }

virtio_net = { path = "apps/drivers/virtio_net" }
tcpip = { path = "apps/servers/tcpip" }
http_server = { path = "apps/bin/http_server" }
hello_from_javascript = { path = "apps/bin/hello_from_javascript" }


[profile.release]
opt-level = 3
lto = true
debug = 1
strip = "debuginfo"
