[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/rust/*",
    "apps/drivers/virtio_net",
    "apps/servers/tcpip",
    "apps/bin/cowsay",
    "apps/bin/http_server",
]

[workspace.package]
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2024"

[workspace.dependencies]
arrayvec = { version = "0.7.6", default-features = false }
hashbrown = "0.15.2"
rustc-hash = { version = "2.1.1", default-features = false }
spin = "0.9.8"
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.17", default-features = false }
toml = "0.8.20"
fdt-rs = { version = "0", default-features = false }
vm-fdt = { version = "0.3.0", default-features = false }

kernel = { path = "kernel" }
starina = { path = "libs/rust/starina" }
starina_types = { path = "libs/rust/starina_types" }
starina_utils = { path = "libs/rust/starina_utils" }
starina_driver_sdk = { path = "libs/rust/driver_sdk" }
starina_build_sdk = { path = "libs/rust/build_sdk" }
virtio = { path = "libs/rust/virtio" }

virtio_net = { path = "apps/drivers/virtio_net" }
tcpip = { path = "apps/servers/tcpip" }
http_server = { path = "apps/bin/http_server" }
cowsay = { path = "apps/bin/cowsay" }
