[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/rust/*",
    "apps/drivers/virtio_net",
    "apps/servers/tcpip",
    "apps/bin/linuxrun",
    "apps/bin/autotest",
    "apps/bin/hello",
    "apps/servers/apiserver",
]

exclude = ["linux/bootd"]

[workspace.package]
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2024"

[workspace.dependencies]
arrayvec = { version = "0.7.6", default-features = false }
hashbrown = "0.15.2"
rustc-hash = { version = "2.1.1", default-features = false }
spin = "0.9.8"
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11.17", default-features = false }
log = { version = "0.4.22", default-features = false }
toml = "0.8.20"
fdt-rs = { version = "0", default-features = false }
vm-fdt = { version = "0.3.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
tempfile = "3.14.0"

kernel = { path = "kernel" }
starina = { path = "libs/rust/starina" }
starina_types = { path = "libs/rust/starina_types" }
starina_utils = { path = "libs/rust/starina_utils" }
starina_driver_sdk = { path = "libs/rust/driver_sdk" }
starina_linux = { path = "linux" }
virtio = { path = "libs/rust/virtio" }

virtio_net = { path = "apps/drivers/virtio_net" }
tcpip = { path = "apps/servers/tcpip" }
linuxrun = { path = "apps/bin/linuxrun" }
autotest = { path = "apps/bin/autotest" }
hello = { path = "apps/bin/hello" }
apiserver = { path = "apps/servers/apiserver" }
