[package]
name = "starina-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "sx"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
starina_types = { workspace = true }
serde_json = { workspace = true }
