[package]
name = "kernel"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
starina = { workspace = true, features = ["kernel"] }
arrayvec = { workspace = true }

ktest = { workspace = true }
