[package]
name = "kernel"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
starina_types = { workspace = true }
starina_utils = { workspace = true }

arrayvec = { workspace = true }
hashbrown = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }

# The kernel does not and should not use this API crate directly, but
# specifying "in-kernel" here automatically enables the feature in all
# in-kernel apps thanks to the feature unification feature of Cargo:
# https://doc.rust-lang.org/1.59.0/cargo/reference/features.html#feature-unification
starina = { workspace = true, features = ["in-kernel"] }

ktest = { workspace = true }
virtio_net = { workspace = true }
