[package]
name = "kernel"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "kernel"
path = "main.rs"

[features]
default = []
wasm = ["dep:wasmi", "dep:hello_wasm"]
exit-on-idle = []

[dependencies]
starina_types = { workspace = true }
starina_utils = { workspace = true }

spin = { workspace = true }
arrayvec = { workspace = true }
hashbrown = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
fdt-rs = { workspace = true }

wasmi = { workspace = true, optional = true }

# The kernel does not and should not use this API crate directly, but
# specifying "in-kernel" here automatically enables the feature in all
# in-kernel apps thanks to the feature unification feature of Cargo:
# https://doc.rust-lang.org/1.59.0/cargo/reference/features.html#feature-unification
starina = { workspace = true, features = ["in-kernel"] }

virtio_net = { workspace = true }
tcpip = { workspace = true }
http_server = { workspace = true }
hello_wasm = { workspace = true, optional = true }
