[package]
name = "goldfish_rtc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "goldfish_rtc"
path = "main.rs"

[dependencies]
starina_api = { workspace = true }
starina_driver_utils = { workspace = true }
chrono = { version = "0.4.38", features = ["alloc"], default-features = false }

[build-dependencies]
starina_autogen = { workspace = true }
