[package]
name = "http_server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "http_server"
path = "main.rs"

[dependencies]
starina_api = { workspace = true }
httparse = { workspace = true }

[build-dependencies]
starina_autogen = { workspace = true }
