[package]
name = "tcpip"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "tcpip"
path = "main.rs"

[dependencies]
starina_api = { workspace = true }
smoltcp = { workspace = true, features = [
    "log",
    "alloc",
    "medium-ethernet",
    "socket-tcp",
    "proto-ipv4",
] }
log = "0.4.22"

[build-dependencies]
starina_autogen = { workspace = true }
