[package]
name = "virtio_net"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "virtio_net"
path = "main.rs"

[dependencies]
starina_api = { workspace = true }
starina_virtio = { workspace = true }
starina_utils = { workspace = true }
starina_driver_utils = { workspace = true }

[build-dependencies]
starina_autogen = { workspace = true }
