[package]
name = "boot_riscv64"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "boot_riscv64"
path = "main.rs"

[dependencies]
starina_kernel = { workspace = true }
starina_utils = { workspace = true }
starina_inlinedvec = { workspace = true }
