[package]
name = "bootd"
publish = false
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
nix = { version = "0.30.1", features = [
    "fs",
    "process",
    "mount",
    "reboot",
    "ioctl",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "2.0.12"
