[package]
name = "virtio_net"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
starina = { workspace = true }
starina_driver_sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
virtio = { workspace = true }

# TODO: Provide mutex in starina
spin = { workspace = true }
