[package]
name = "virtio_net"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
starina = { workspace = true }
starina_driver_sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
virtio = { workspace = true }

[build-dependencies]
starina_build_sdk = { workspace = true }
