[package]
name = "apiserver"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
starina = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
