[package]
name = "lx"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
starina = { workspace = true }
serde = { workspace = true, features = ["derive"] }
vm-fdt = { workspace = true, features = ["alloc"] }

[build-dependencies]
starina_build_sdk = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
