[package]
name = "lx"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
starina = { workspace = true }
serde = { workspace = true, features = ["derive"] }
vm-fdt = { workspace = true, features = ["alloc"] }

[build-dependencies]
starina_build_sdk = { workspace = true }
