[package]
name = "tcpip"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
starina = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = "0.4.22"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "alloc",
    "medium-ethernet",
    "socket-tcp",
    "proto-ipv4",
] }
