[package]
name = "tcpip"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
starina = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "alloc",
    "medium-ethernet",
    "socket-tcp",
    "proto-ipv4",
] }
