[package]
name = "starina"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
hashbrown = { workspace = true }
spin = { workspace = true }
starina_types = { workspace = true }
starina_utils = { workspace = true }
serde = { workspace = true }

[features]
in-kernel = []
