[package]
name = "starina"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
hashbrown = { workspace = true }
spin = { workspace = true }
starina_types = { workspace = true }
starina_utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

vm-fdt = { workspace = true, features = ["alloc"], optional = true }

[features]
default = ["linux"]
in-kernel = []
linux = ["vm-fdt"]
