[package]
name = "starina"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
hashbrown = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
starina_types = { workspace = true }
starina_utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
in-kernel = []
