[package]
name = "starina_autogen"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
path = "./lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
starina_types = { workspace = true }
minijinja = { workspace = true }
serde_yaml = { workspace = true }
