[package]
name = "starina_types"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
fdt-rs = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }

[features]
