[package]
name = "starina_types"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true, features = ["alloc"] }
hashbrown = { workspace = true, features = ["serde"] }

[features]
