[package]
name = "wasmjs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
wasmtime = { workspace = true, features = [
    "runtime",
    "gc",
    "gc-drc",
    "custom-virtual-memory",
] }
anyhow = { workspace = true }

[build-dependencies]
wasmtime = { workspace = true, features = [
    "cranelift",
    "gc",
    "gc-drc",
    "all-arch",
] }
